--- a/company/templates/company/inactive_company.html
+++ b/company/templates/company/inactive_company.html
@@ -17,7 +17,7 @@
           <h6>Status: {{ status }}</h6>
 
           <h6>
-            An email was sent to you regarding the disapproval, if not please contact us.
+            We disapproved of your company! If you believe this decision is an error, please contact us.
           </h6>
           <p>Delete account <a href="{% url 'company_delete' %}">here</a></p>
 
