--- a/company/templates/company/pending_company.html
+++ b/company/templates/company/pending_company.html
@@ -17,8 +17,7 @@
           <h6>Status: {{ company_status }}</h6>
 
           <h6>
-            Company is currently awaiting activation by site admin,
-            once activated an email will be sent to you.
+            The company is currently awaiting activation by the site admin. Once activated, you'll be able to accept bookings.
           </h6>
           <p>Delete account <a href="{% url 'company_delete' %}">here</a></p>
 
