Refactor error layout

--- a/company/templates/company/exists.html
+++ b/company/templates/company/exists.html
@@ -12,7 +12,7 @@
           {% if user.is_authenticated %}
 
           <div class="alert alert-danger" role="alert">
-            Error: Company Name Already Exists!
+            <strong>Error:</strong> Company Name Already Exists!
           </div>
 
           <span>Try again <a href="{% url 'company_account' %}">here</a></span>
