--- a/company/templates/company/form_company_not_valid.html
+++ b/company/templates/company/form_company_not_valid.html
@@ -18,7 +18,7 @@
                   <p>Input field: {{ key }}</p>
                 </div>
                 <div class="col-sm-8">
-                  <p>Error message: {{ value }}</p>
+                  <p><strong>Error:</strong> {{ value }}</p>
                 </div>
               </div>
             </div>
