--- a/baseapp/templates/contact.html
+++ b/baseapp/templates/contact.html
@@ -11,7 +11,7 @@
 
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold lh-1 mb-3">Contact Us</h1>
-        <p class="lead">Please use the form below or send us an email to: email@email.com and we'll hasten to assist you to your satisfaction.</p>
+        <p class="lead">Please use the form below or email us at: email@email.com, and we'll hasten to assist you to your satisfaction.</p>
         <p class="lead">We live by our motto: No man left behind :D</p>
       </div>
 
