--- a/baseapp/templates/message_sent.html
+++ b/baseapp/templates/message_sent.html
@@ -5,7 +5,7 @@
   <div class="px-4 py-5 my-5 text-center">
     <h2 class="display-5 fw-bold">Message Sent</h2>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Thanks for reaching out, very brave of you, although we don't bite. Kidding aside, our response times are low, someone of our great support team will be with you shortly, if they haven't already. Seriously, stop reading .. go check your email :P</p>
+      <p class="lead mb-4">Thanks for reaching out; very brave of you, although we don't bite. Kidding aside! Our response times are low. If they haven't already, someone from our excellent support team will be with you shortly. Seriously, stop reading and check your email :P</p>
     </div>
   </div>
 
