Remove b tag add bootstrap bold class

--- a/company/templates/company/account.html
+++ b/company/templates/company/account.html
@@ -17,8 +17,8 @@
             <h6 class="text-light px-sm-5">Good day {{ user_first_name }}</h6>
           </div>
           <div class="p-2">
-            <a class="btn btn-link mb-0 btn-offcanvas text-end text-light px-sm-5" role="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasAccountInfo" aria-controls="offcanvasAccountInfo">
-              <b>Account Info</b>
+            <a class="btn btn-link mb-0 px-sm-5 btn-offcanvas text-end text-light fw-bold" role="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasAccountInfo" aria-controls="offcanvasAccountInfo">
+              Account Info
             </a>
           </div>
         </div>
