--- a/company/templates/company/bookings_list.html
+++ b/company/templates/company/bookings_list.html
@@ -2,97 +2,98 @@
 
 {% load crispy_forms_tags %}
 
-  <h2 class="mb-3">Booking List</h2>
 
   {% if bookings|length > 0 %}
-  <div class="table-responsive mb-5">
-    <table class="table">
+  <h2 class="mb-3">Booking List</h2>
 
-      <thead class="table-primary">
-        <tr class="text-center">
-          <th scope="col">Id</th>
-          <th scope="col">Date</th>
-          <th scope="col">Spots</th>
-          <th scope="col">Customer</th>
-          <th scope="col">Phone</th>
-          <th scope="col">Email</th>
-        </tr>
-      </thead>
+    <div class="table-responsive mb-5">
+      <table class="table">
 
-      <tbody>
-        {% for booking in bookings %}
-          <tr class="align-middle text-center">
-            <th class="table-primary" scope="row">{{ booking.id }}</th>
-            {% if not forloop.counter|divisibleby:2 %}
-            <td class="table-light">{{ booking.date_time }}</td>
-            <td class="table-light">{{ booking.spots }}</td>
-            <td class="table-light">{{ booking.customer }}</td>
-            <td class="table-light">{{ booking.customer.phone }}</td>
-            <td class="table-light">{{ booking.customer.email }}</td>
-            {% elif forloop.counter|divisibleby:2 %}
-            <td class="table-secondary">{{ booking.date_time }}</td>
-            <td class="table-secondary">{{ booking.spots }}</td>
-            <td class="table-secondary">{{ booking.customer }}</td>
-            <td class="table-secondary">{{ booking.customer.phone }}</td>
-            <td class="table-secondary">{{ booking.customer.email }}</td>
-            {% endif %}
+        <thead class="table-primary">
+          <tr class="text-center">
+            <th scope="col">Id</th>
+            <th scope="col">Date</th>
+            <th scope="col">Spots</th>
+            <th scope="col">Customer</th>
+            <th scope="col">Phone</th>
+            <th scope="col">Email</th>
           </tr>
-        {% endfor %}
-      </tbody>
+        </thead>
 
-    </table>
-  </div>
+        <tbody>
+          {% for booking in bookings %}
+            <tr class="align-middle text-center">
+              <th class="table-primary" scope="row">{{ booking.id }}</th>
+              {% if not forloop.counter|divisibleby:2 %}
+              <td class="table-light">{{ booking.date_time }}</td>
+              <td class="table-light">{{ booking.spots }}</td>
+              <td class="table-light">{{ booking.customer }}</td>
+              <td class="table-light">{{ booking.customer.phone }}</td>
+              <td class="table-light">{{ booking.customer.email }}</td>
+              {% elif forloop.counter|divisibleby:2 %}
+              <td class="table-secondary">{{ booking.date_time }}</td>
+              <td class="table-secondary">{{ booking.spots }}</td>
+              <td class="table-secondary">{{ booking.customer }}</td>
+              <td class="table-secondary">{{ booking.customer.phone }}</td>
+              <td class="table-secondary">{{ booking.customer.email }}</td>
+              {% endif %}
+            </tr>
+          {% endfor %}
+        </tbody>
 
-  <nav aria-label="Page pagination">
-    <ul class="pagination justify-content-center">
+      </table>
+    </div>
 
-      {% if page_bookings.has_previous %}
-      <li class="page-item">
-        <a class="page-link" href="?page=1">&laquo; first</a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="?page={{ page_bookings.previous_page_number }}">
-          Previous
-        </a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="?page={{ page_bookings.previous_page_number }}">
-          {{ page_bookings.previous_page_number }}
-        </a>
-      </li>
-      {% endif %}
+    <nav aria-label="Page pagination">
+      <ul class="pagination justify-content-center">
 
-      <li class="page-item active" aria-current="page">
-        <span class="page-link">
-          {{ page_bookings.number }}
-        </span>
-      </li>
-
-      {% if page_bookings.has_next %}
-      <li class="page-item">
-        <a class="page-link" href="?page={{ page_bookings.next_page_number }}">
-          {{ page_bookings.next_page_number }}
-        </a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="?page={{ page_bookings.next_page_number }}">
-          Next
-        </a>
-      </li>
+        {% if page_bookings.has_previous %}
         <li class="page-item">
-          <a class="page-link" href="?page={{ page_bookings.paginator.num_pages }}">
-            last &raquo;
+          <a class="page-link" href="?page=1">&laquo; first</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="?page={{ page_bookings.previous_page_number }}">
+            Previous
           </a>
         </li>
-      {% endif %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ page_bookings.previous_page_number }}">
+            {{ page_bookings.previous_page_number }}
+          </a>
+        </li>
+        {% endif %}
 
-    </ul>
-  </nav>
+        <li class="page-item active" aria-current="page">
+          <span class="page-link">
+            {{ page_bookings.number }}
+          </span>
+        </li>
+
+        {% if page_bookings.has_next %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ page_bookings.next_page_number }}">
+            {{ page_bookings.next_page_number }}
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="?page={{ page_bookings.next_page_number }}">
+            Next
+          </a>
+        </li>
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_bookings.paginator.num_pages }}">
+              last &raquo;
+            </a>
+          </li>
+        {% endif %}
+
+      </ul>
+    </nav>
 
   {% else %}
   <div class="d-sm-flex justify-content-center align-items-center gap-3">
     <h4 class="mb-3 mb-sm-0">No Bookings yet.</h4>
-    <h6>Advertise your <a href="/booking/{{ slug }}" target="_blank">View page</a> to receive bookings.</h6>
+    <h6>Advertise your <a href="/booking/{{ slug }}" target="_blank">booking page</a> to receive bookings.</h6>
   </div>
 
   {% endif %}
