Add margin top to no bookings div

--- a/company/templates/company/bookings_list.html
+++ b/company/templates/company/bookings_list.html
@@ -91,7 +91,7 @@
     </nav>
 
   {% else %}
-  <div class="d-sm-flex justify-content-center align-items-center gap-3">
+  <div class="d-sm-flex mt-5 justify-content-center align-items-center gap-3">
     <h4 class="mb-3 mb-sm-0">No Bookings yet.</h4>
     <h6>Advertise your <a href="/booking/{{ slug }}" target="_blank">booking page</a> to receive bookings.</h6>
   </div>
