--- a/company/templates/company/account.html
+++ b/company/templates/company/account.html
@@ -17,9 +17,7 @@
             <h6 class="text-light px-sm-5">Good day {{ user_first_name }}</h6>
           </div>
           <div class="p-2">
-            <a class="btn btn-link mb-0 px-sm-5 btn-offcanvas text-end text-light fw-bold" role="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasAccountInfo" aria-controls="offcanvasAccountInfo">
-              Account Info
-            </a>
+            <a class="btn btn-link mb-0 px-sm-5 btn-offcanvas text-end text-light fw-bold" role="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasAccountInfo" aria-controls="offcanvasAccountInfo">Account Info</a>
           </div>
         </div>
 
