Add history back to perserve entered form

--- a/company/templates/company/form_company_not_valid.html
+++ b/company/templates/company/form_company_not_valid.html
@@ -26,7 +26,7 @@
             <div class="container">
               <div class="row justify-content-start">
                 <div class="col">
-                  <span>Please try again </span><a href="{% url 'company_edit' %}">here</a>
+                  <span>Please try again </span><a href="javascript:history.back()">here</a>
                 </div>
               </div>
             </div>
