Fix flashing of offcanvas button

--- a/company/templates/company/account.html
+++ b/company/templates/company/account.html
@@ -13,11 +13,11 @@
       <div class="col-md-10">
 
         <div class="d-flex flex-row sticky-top gap-3 mb-4 justify-content-between align-items-center bg-primary bg-gradient rounded-1">
-          <div class="p-2">
+          <div class="p-3">
             <h6 class="text-light px-sm-5">Good day {{ user_first_name }}</h6>
           </div>
-          <div class="p-2">
-            <a class="btn btn-link mb-0 px-sm-5 btn-offcanvas text-end text-light fw-bold" role="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasAccountInfo" aria-controls="offcanvasAccountInfo">Account Info</a>
+          <div class="p-3">
+            <a class="btn-offcanvas mb-0 px-sm-5 text-end text-light fw-bold" role="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasAccountInfo" aria-controls="offcanvasAccountInfo">Account Info</a>
           </div>
         </div>
 
