--- a/company/templates/company/bookings_list.html
+++ b/company/templates/company/bookings_list.html
@@ -4,7 +4,10 @@
 
 
   {% if bookings|length > 0 %}
-  <h2 class="mb-3">Booking List</h2>
+  <div class="d-flex justify-content-between align-items-center">
+    <h2 class="mb-3">Booking List</h2>
+    <h6 class="d-lg-none">Swipe right</h6>
+  </div>
 
     <div class="table-responsive mb-5">
       <table class="table">
