Add missing ending span tag

--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,9 @@
   <nav class="navbar fixed-top navbar-expand-md text-dark bg-white">
     <div class="container-sm">
 
-      <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">Booka<span class="thin">ble</span></a>
+      <a class="navbar-brand" href="{% url 'home' %}">
+        <span class="brand">Booka</span><span class="thin">ble</span>
+      </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon"></span>
