Re-word why bookable section

--- a/baseapp/templates/index.html
+++ b/baseapp/templates/index.html
@@ -26,7 +26,7 @@
 
       <h2 class="display-5 fw-bold text-white">Why Bookable</h2>
       <div class="col-lg-6 mx-auto">
-        <p class="fs-5 mb-4">Bookable is simple, straightforward, easy, fast, and reliable. Bookable can handle millions of requests anytime and is still hungry for more, so your bookings will never be interrupted.</p>
+        <p class="fs-5 mb-4">Bookable is simple, straightforward, easy, fast, and reliable. Bookable can handle millions of requests anytime and is still room for more, so your bookings will never be interrupted.</p>
       </div>
 
     </div>
