--- a/baseapp/templates/index.html
+++ b/baseapp/templates/index.html
@@ -9,7 +9,7 @@
       <p class="lead mb-4">Simply put, we take care of all your bookings and make it easy for your customers to book while at the same time, booking management is simple. We believe you should be focusing on what you love doing most.</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
         <a class="btn btn-primary btn-lg px-4 me-sm-3" href="{% url 'account_signup' %}" role="button">Register</a>
-        <a class="btn btn-outline-secondary btn-lg px-4" href="/contact/" role="button">Contact</a>
+        <a class="btn btn-outline-dark btn-lg px-4" href="/contact/" role="button">Contact</a>
       </div>
     </div>
 
@@ -26,7 +26,7 @@
 
       <h2 class="display-5 fw-bold text-white">Why Bookable</h2>
       <div class="col-lg-6 mx-auto">
-        <p class="fs-5 mb-4">Bookable is simple, straightforward, easy, fast, and reliable. Bookable can handle millions of requests anytime and is still room for more, so your bookings will never be interrupted.</p>
+        <p class="fs-5 mb-4 text-white">Bookable is simple, straightforward, easy, fast, and reliable. Bookable can handle millions of requests anytime and is still room for more, so your bookings will never be interrupted.</p>
       </div>
 
     </div>
@@ -100,7 +100,7 @@
         </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-6 question">
         <div class="h-100 p-5 text-bg-secondary bg-gradient border rounded-3">
           <h2>Got a question or two?</h2>
           <p>Don't let us keep you waiting. Send us an email, and we'll be more than happy to answer all questions you may have. We stand ready to assist you in your journey.</p>
