Fix a11y button outline problem

--- a/baseapp/templates/contact.html
+++ b/baseapp/templates/contact.html
@@ -46,7 +46,7 @@
           <label for="textarea">Message</label>
         </div>
 
-        <button type="submit" class="btn btn-outline-primary">Send Away</button>
+        <button type="submit" class="btn btn-primary">Send Away</button>
 
       </form>
 
